src/test/ui/feature-gate-may_ignore.rs
#[may_ignore]
//~^ ERROR the `#[may_ignore]` attribute is an experimental feature [E0658]
fn main() {
}
